--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,17 @@
 }
 
 
+@media (max-width: 991px) {
+  .navbar-brand {
+    font-size: 2rem !important;
+  }
+
+  #navbarnav.navbar-collapse.collapse.show {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 1.5rem !important;
+  }
+}
 
 /* all / */
 
@@ -47,7 +58,7 @@
 .h4 {
   align-self: stretch;
   color: #2D2D2D;
-  font-size: 20px;
+  font-size: 24px;
   font-family: Epilogue;
   font-weight: 600;
   line-height: 30px;
@@ -64,10 +75,29 @@
   word-wrap: break-word
 }
 
+
+@media (max-width: 991px) {
+  .h1 {
+    font-size: 3.5em !important;
+  }
+
+  .h2 {
+    font-size: 2.5em !important;
+  }
+
+  .h4 {
+    font-size: 1.5em !important;
+  }
+
+  .h5 {
+    font-size: 1.25em !important;
+  }
+}
+
 /* hero */
 
 #hero {
-  background: linear-gradient(178deg, #e3e3e5, #e3e3e5,#e3e3e5,#ffffff, #f8f9fa, #f8f9fa, #fff6fea2, #fff6fea2, #ffffff, #ffffff, #ffffff , #ffffff, #ffffff);
+  background: linear-gradient(178deg, #e3e3e5, #e3e3e5, #e3e3e5, #ffffff, #f8f9fa, #f8f9fa, #fff6fea2, #fff6fea2, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff);
   background-size: 300% 300%;
   animation: gradient-animation 25s ease infinite;
 }
@@ -129,9 +159,12 @@
   padding-bottom: 24;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 991px) {
   .span-a {
+    margin: 20px 0px 20px 0px;
     min-width: 600px;
+    line-height: inherit;
+    font-size: 1.8rem !important;
   }
 }
 
@@ -158,7 +191,7 @@
 }
 
 .button {
-  color: white border: none;
+  color: white; border: none;
   padding-left: 64px;
   padding-right: 64px;
   padding-top: 24px;
@@ -279,7 +312,6 @@
 /*logobar */
 
 .logobar {
-  style="width: 85%; 
  padding-left: 24px;
   padding-right: 24px;
   padding-top: 28px;
@@ -299,8 +331,6 @@
 .skill-logo {
   width: inherit;
 }
-
-.Skilllogo-animate {}
 
 .Skilllogo-animate:hover {
   color: black;
@@ -343,7 +373,6 @@
 .conteneur {
   width: 78.02px;
   height: 75.98px;
-  position: relative;
 }
 
 .conteneur:before {
@@ -394,12 +423,12 @@
   display: flex;
   top: 0%;
   left: 0%;
-
   opacity: 1;
 }
 
 .conteneura:hover .txtcontenu {
-  width: 100% height: 76px;
+  width: 100%;
+  height: 76px;
   opacity: 1;
 }
 
@@ -409,16 +438,17 @@
 }
 
 @media (max-width: 1340px) {
-  .svg-bg-a  {
+  .svg-bg-a {
     margin-top: -50px;
   }
 }
+
 @media (max-width: 750px) {
   .svg-bg-a {
     margin-top: -30px;
   }
 }
-/* 
+
 /* portfolio */
 
 #portfolio {
@@ -521,15 +551,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(178deg, #ffffff, #ffffff, #ffffff,#f8f9fa, #ffffff, #e3e3e5, #e3e3e5);
+  background: linear-gradient(178deg, #ffffff, #ffffff, #ffffff, #f8f9fa, #ffffff, #e3e3e5, #e3e3e5);
   background-size: 300% 300%;
   animation: gradient-animation 3s ease infinite;
   max-width: 2500px;
 }
 
-
-#e3e3e5, #e3e3e5, #f8f9fa, #f8f9fa, #fff6fea2, #fff6fea2, #ffffff
-@keyframes gradient-animation {
+ @keyframes gradient-animation {
   0% {
     background-position: 0% 50%;
   }
@@ -546,6 +574,7 @@
 .wave {
   margin-top: -50px;
 }
+
 .wave-2 {
   padding-top: -100px;
 }
@@ -665,7 +694,7 @@
 .footer-description-contener-paragraph {
   align-self: stretch;
   color: #2D2D2D;
-  font-size: 20px;
+  font-size: 18px;
   font-family: Epilogue;
   font-weight: 400;
   line-height: 27px;
@@ -673,9 +702,17 @@
   min-width: 600px;
 }
 
+@media (max-width: 991px) {
+  .footer-description-contener-paragraph {
+    line-height: inherit;
+    font-size: 1.8rem !important;
+  }
+}
+
 @media (max-width: 689px) {
   .footer-description-contener-paragraph {
     min-width: 400px;
+
   }
 }
 
@@ -805,11 +842,12 @@
 .footer-h3-variant {
   width: 626px;
   color: #2D2D2D;
-  font-size: 32px;
+  font-size: 40px;
   font-family: Epilogue;
-  font-weight: 600;
+  font-weight: 500 !important;
   line-height: 42px;
   word-wrap: break-word;
+  margin: 0px 0px 40px 0px !important;
 }
 
 #form-contener {
@@ -954,6 +992,6 @@ span {
 .box-form-columm-footer {
   gap: 20px;
   display: flex;
-  padding-down: 20px;
+  padding-bottom: 20px;
   flex-direction: column;
 }
